--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -37,25 +37,12 @@
   }
 
   .right {
-    padding-right: 20px;
+    display: flex;
+    align-items: center;
+    padding-right: 40px;
 
-    .logout {
-      margin-right: 20px;
-    }
-
-    .bell-button {
-      position: relative;
-      span {
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        color: #fff;
-        font-size: 14px;
-        font-weight: 600;
-        padding: 0 6px 2px;
-        border-radius: 10px;
-        background: $red;
-      }
+    button {
+      font-size: 14px;
     }
   }
 }
