--- a/src/components/core/user/User.scss
+++ b/src/components/core/user/User.scss
@@ -1,7 +1,5 @@
-@import "variables.scss";
-
-.c-homepage {
-  padding: 20px;
+.c-user {
+  padding: 20px 20px 40px;
   background: #fff;
 
   .c-preloader {
@@ -9,12 +7,15 @@
     padding-top: 40px;
   }
 
-  //.row {
-  //  margin-top: 20px;
-  //}
-
   .c-product  {
     margin-top: 20px;
   }
-}
 
+  .msg {
+    margin-top: 10px;
+
+    a {
+      margin-top: 5px;
+    }
+  }
+}
